--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "browser-sync": "^2.26.3",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
